🔧 Aktualisiert index.html
CSS hinzugefügt:
- Google Fonts hinzugefügt
- Hintergrundfarbe hinzugefügt
- Text zentriert
- Weitere optische Anpassungen

--- a/invite/index.html
+++ b/invite/index.html
@@ -6,6 +6,10 @@
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#dd9575">
   <title>joschy.dev | Combot Discord</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&family=Press+Start+2P&display=swap">
+  <style>
+    html,body{height:100%;margin:0;font-family:'Press Start 2P',cursive;background:linear-gradient(135deg,#9e4c7f 0%,#dd9575 70%);display:flex;justify-content:center;align-items:center}.content{text-align:center}h1,h2{margin:0;font-size:60px;color:white}h2{font-size:30px}@media screen and (max-width:600px){h1{font-size:30px}h2{font-size:20px}}
+  </style>
   <meta http-equiv="Refresh" content="5; url='https://discord.gg/x8JkDVPqtU'">
 </head>
 <body>
